@@ -1,3 +1,8 @@
+2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* js/CalDAVAclManager.js: trigger the "caldav-acl-loaded"
+	notification only when the second address set is received.
+
 2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	*chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js,
